[project]
name = "comfyui_kj"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["aiohttp"]

[project.urls]
Repository = "https://github.com/XieChengYuan/comfyui_kj"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lingha0h"
DisplayName = "comfyui_kj"
Icon = ""
