[project]
name = "comfyui_kj"
description = "comfyui_kj, A tool that can package workflows into projects and publish them to a WeChat Mini Program named Kaji, allowing charges to be collected from users."
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["aiohttp"]

[project.urls]
Repository = "https://github.com/lingha0h/comfyui_kj"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lingha0h"
DisplayName = "comfyui_kj"
Icon = ""
